--- a/Assignment_2/Assignment 2.ipynb
+++ b/Assignment_2/Assignment 2.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "781d89f7",
+   "id": "8de343f8",
    "metadata": {},
    "source": [
     "# Question 1"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b06f1ef0",
+   "id": "d76c7501",
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +83,9 @@
     "\n",
     "   def displayEmployee(self):\n",
     "       print(\"Name : {0}, Salary: {1}, Age: {2}\".format(self.name,self.salary, self.__age))\n",
+    "    \n",
+    "    def work(self):\n",
+    "        print(f\"{self.name} is working.\")\n",
     "\n",
     "# create the employees\n",
     "employees = [\n",
@@ -102,8 +105,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "fdaa992e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company Uno is working.\n",
+      "----------------------------\n",
+      "Stan is working.\n",
+      "Markus is working.\n",
+      "Estivessem is working.\n",
+      "Tiler is working.\n",
+      "Frayink is working.\n",
+      "----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee: #same as Employee(object)\n",
+    "   #Common base class for all employees\n",
+    "    empCount = 0 #class attribute\n",
+    "\n",
+    "   #name, salary and _age are instance attributes\n",
+    "    def __init__(self, name, salary, age): #initializer must have at least argument beside self\n",
+    "          self.name = name\n",
+    "          self.salary = salary\n",
+    "          self.__age = age\n",
+    "          Employee.empCount += 1\n",
+    "\n",
+    "    def displayCount(self):\n",
+    "            print(\"Total Employee: {0}\".format(Employee.empCount))\n",
+    "\n",
+    "    def displayEmployee(self):\n",
+    "            print(\"Name : {0}, Salary: {1}, Age: {2}\".format(self.name,self.salary, self.__age))\n",
+    "\n",
+    "    def work(self):\n",
+    "            print(f\"{self.name} is working.\")\n",
+    "\n",
+    "class Company:\n",
+    "    def __init__(self, name, emp1, emp2, emp3, emp4, emp5):\n",
+    "        self.employ1 = emp1\n",
+    "        self.employ2 = emp2\n",
+    "        self.employ3 = emp3\n",
+    "        self.employ4 = emp4\n",
+    "        self.employ5 = emp5\n",
+    "        self.CompanyName = name\n",
+    "\n",
+    "    def work(self):\n",
+    "        print(f\"{self.CompanyName} is working.\\n----------------------------\")\n",
+    "        emp1.work()\n",
+    "        emp2.work()\n",
+    "        emp3.work()\n",
+    "        emp4.work()\n",
+    "        emp5.work()\n",
+    "        print(\"----------------------------\")\n",
+    "\n",
+    "emp1 = Employee(\"Stan\",10000,21)\n",
+    "emp2 = Employee(\"Markus\",23004,43)\n",
+    "emp3 = Employee(\"Estivessem\",100,3)\n",
+    "emp4 = Employee(\"Tiler\",1000403,17)\n",
+    "emp5 = Employee(\"Frayink\",2000,31)\n",
+    "company1 = Company(\"Company Uno\",emp1, emp2, emp3, emp4, emp5)\n",
+    "company1.work()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6fc3c9e5",
+   "id": "204877c7",
    "metadata": {},
    "outputs": [],
    "source": []
