--- a/Assignment_2/Assignment 2.ipynb
+++ b/Assignment_2/Assignment 2.ipynb
@@ -104,6 +104,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "394483df",
+   "metadata": {},
+   "source": [
+    "# Question 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fdaa992e",
@@ -173,9 +181,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6922b772",
+   "metadata": {},
+   "source": [
+    "# Question 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "cc0b20f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest Transactions:\n",
+      "Residential: $884790.00\n",
+      "Condo: $360000.00\n",
+      "Multi-Family: $416767.00\n",
+      "\n",
+      "Lowest Transactions:\n",
+      "Residential: $1551.00\n",
+      "Condo: $40000.00\n",
+      "Multi-Family: $100000.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv \n",
+    "import math\n",
+    "import numpy as np\n",
+    "# Highest and Lowest transactions of 'price' \n",
+    "# for the three categories of real estate in 'type'\n",
+    "# categories are 'Residential', 'Condo', 'Multi-Family'\n",
+    "\n",
+    "filename = 'Sacramentorealestatetransactions.csv'\n",
+    "with open(filename, 'r') as csvfile:\n",
+    "    datareader = csv.reader(csvfile)\n",
+    "    line_count = 0\n",
+    "    \n",
+    "    \n",
+    "    resValue_max = -math.inf\n",
+    "    resValue_min = math.inf\n",
+    "    resId_max = 0\n",
+    "    resId_min = 0\n",
+    "    resCity_max = ''\n",
+    "    resCity_min = ''\n",
+    "    \n",
+    "    conValue_max = -math.inf\n",
+    "    conValue_min = math.inf\n",
+    "    conId_max = 0\n",
+    "    conId_min = 0\n",
+    "    \n",
+    "    mulValue_max = -math.inf\n",
+    "    mulValue_min = math.inf\n",
+    "    mulId_max = 0\n",
+    "    mulId_min = 0\n",
+    "    \n",
+    "    for row in datareader:\n",
+    "        if line_count == 0:\n",
+    "            line_count+= 1\n",
+    "        else: \n",
+    "            line_count += 1\n",
+    "            if row[7] == 'Residential':\n",
+    "                if float(row[9]) > resValue_max:\n",
+    "                    resId_max, resValue_max,resCity_max = row[0], float(row[9]), row[1]\n",
+    "                if float(row[9]) < resValue_min:\n",
+    "                    resId_min, resValue_min, resCity_min = row[0], float(row[9]), row[1]\n",
+    "            if row[7] == 'Condo':\n",
+    "                if float(row[9]) > conValue_max:\n",
+    "                    conId_max, conValue_max = row[0], float(row[9])\n",
+    "                if float(row[9]) < conValue_min:\n",
+    "                    conId_min, conValue_min = row[0], float(row[9])\n",
+    "            if row[7] == 'Multi-Family':\n",
+    "                if float(row[9]) > mulValue_max:\n",
+    "                    mulId_max, mulValue_max = row[0], float(row[9])\n",
+    "                if float(row[9]) < mulValue_min:\n",
+    "                    mulId_min, mulValue_min = row[0], float(row[9])\n",
+    "                    \n",
+    "    \n",
+    "    \n",
+    "    print(f'Highest Transactions:\\nResidential: ${resValue_max:.2f}\\nCondo: ${conValue_max:.2f}\\nMulti-Family: ${mulValue_max:.2f}\\n')\n",
+    "    print(f'Lowest Transactions:\\nResidential: ${resValue_min:.2f}\\nCondo: ${conValue_min:.2f}\\nMulti-Family: ${mulValue_min:.2f}')\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204877c7",
+   "id": "9426d2f0",
    "metadata": {},
    "outputs": [],
    "source": []
