A2 final edit, Numpy Creation
Added question 4 to the Assignment 2 notebook, and created/added the materials for the Numpy Programming Assignment

--- a/Assignment_2/Assignment 2.ipynb
+++ b/Assignment_2/Assignment 2.ipynb
@@ -250,6 +250,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0450ab7",
+   "metadata": {},
+   "source": [
+    "# Question 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d05fa591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import UserDict\n",
+    "import json\n",
+    "class EmployeeD(UserDict):\n",
+    "\n",
+    "    def __getitem__(self, key):\n",
+    "        value = super().__getitem__(key)\n",
+    "        return value['salary']\n",
+    "    \n",
+    "    def __setitem__(self, key, value):\n",
+    "        if 'name' in value and 'salary' in value and 'age' in value:\n",
+    "            super().__setitem__(key, value)\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open(\"C:\\\\Users\\\\Gavin Stone\\\\Downloads\\\\employee_data.json\",\"r\") as f:\n",
+    "          jsondata=json.load(f)\n",
+    "          print(jsondata)\n",
+    "f.close()\n",
+    "\n",
+    "empDict=EmployeeD()\n",
+    "\n",
+    "for index, emp in enumerate(jsondata):\n",
+    "    empDict[index] = emp\n",
+    "\n",
+    "total_salary=0\n",
+    "\n",
+    "for emp in empDict:\n",
+    "     total_salary+=empDict[emp]\n",
+    "\n",
+    "print(total_salary)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c981f5b4",
    "metadata": {},
    "source": [
