--- a/Assignment_2/Assignment 2.ipynb
+++ b/Assignment_2/Assignment 2.ipynb
@@ -18,6 +18,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c622135a",
+   "metadata": {},
+   "source": [
+    "# Group 1:\n",
+    "# Gavin Stone, Isaac Adams, Kaden Hicklin, Owen Miller, Samuel Shevlin, Sullivan Gleason"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8de343f8",
    "metadata": {},
    "source": [
